# DiligentCore

./: .clang-format  .gitignore  .gitmodules  .ignore  .travis.yml  BuildUtils.cmake  CMakeLists.txt  CODEOWNERS  Doxyfile  FindGLSLang.cmake  README.md  ReleaseHistory.md  Troubleshooting.md  appveyor.yml  dotnet-build-package.py  ios.toolchain.cmake
BuildTools/: CMakeLists.txt  validate_format_win.bat
BuildTools/.NET/: dotnet-build-package.py  requirements.txt
BuildTools/Android/: build.gradle  gradle.properties  settings.gradle
BuildTools/Android/tests/: build.gradle
BuildTools/CMake/: BuildUtils.cmake  FindWindowsSDK.cmake  VulkanUtils.cmake
BuildTools/File2Include/: CMakeLists.txt  File2String.cpp  script.py  tests.py
BuildTools/FormatValidation/: clang-format_linux_10.0.0  validate_format_linux.sh  validate_format_linux_implementation.sh  validate_format_mac.sh  validate_format_win.bat
BuildTools/Sanitizers/: lsan.supp  tsan.supp
BuildTools/Scripts/appveyor/: install.bat  install.ps1  run_tests.bat
BuildTools/Scripts/github_actions/: configure_cmake.sh  vulkan_sdk.sh
BuildTools/Scripts/travis/: before_install.sh  build.sh  build_install.sh  run_tests.sh  validate_format.sh
Common/: CMakeLists.txt  readme.md
Common/include/: AdaptiveFixedBlockAllocator.h  BasicFileStream.h  BasicTypes.h  DataBlobImpl.h  DebugUtilities.h  DefaultRawMemoryAllocator.h  Errors.h  FileWrapper.h  FixedBlockMemoryAllocator.h  FormatMessage.h  HashUtils.h  InterfaceID.h  LockHelper.h  ObjectBase.h  RefCntAutoPtr.h  RefCountedObjectImpl.h  STDAllocator.h  StringTools.h  Timer.h  UniqueIdentifier.h  ValidatedCast.h  pch.h
Common/interface/: AdaptiveFixedBlockAllocator.h  AdvancedMath.h  AdvancedMath.hpp  Align.h  Align.hpp  ArchiveFileImpl.hpp  ArchiveMemoryImpl.hpp  AsyncInitializer.hpp  BasicFileStream.h  BasicFileStream.hpp  BasicMath.h  BasicMath.hpp  BasicMathNEON.hpp  BasicMathSSE.hpp  CallbackWrapper.hpp  Cast.hpp  ComPtr.h  CompilerDefinitions.h  DataBlob.h  DataBlobImpl.h  DataBlobImpl.hpp  DefaultRawMemoryAllocator.h  DefaultRawMemoryAllocator.hpp  Definitions.hpp  DummyReferenceCounters.hpp  DynamicLinearAllocator.hpp  EngineMemory.h  EnumCast.hpp  FastRand.hpp  FileStream.h  FileWrapper.h  FileWrapper.hpp  FilteringTools.hpp  FixedBlockMemoryAllocator.h  FixedBlockMemoryAllocator.hpp  FixedLinearAllocator.hpp  Float16.hpp  GeometryPrimitives.h  HashUtils.h  HashUtils.hpp  (+46 more)
Common/make/: AppCommon.mk
Common/src/: ArchiveFileImpl.cpp  ArchiveMemoryImpl.cpp  Array2DTools.cpp  BasicFileStream.cpp  DataBlobImpl.cpp  DefaultRawMemoryAllocator.cpp  EngineMemory.cpp  FileWrapper.cpp  FixedBlockMemoryAllocator.cpp  GeometryPrimitives.cpp  ImageTools.cpp  LockHelper.cpp  MemoryFileStream.cpp  Serializer.cpp  ShaderParsingTools.cpp  SpinLock.cpp  ThreadPool.cpp  Timer.cpp  pch.cpp
Graphics/: CMakeLists.txt
Graphics/ArchiveBuilder/: CMakeLists.txt
Graphics/ArchiveBuilder/include/: ArchiveBuilderImpl.hpp  ArchiverImpl.hpp  DummyRenderDevice.hpp  SerializableRenderPassImpl.hpp  SerializableResourceSignatureImpl.hpp  SerializableShaderImpl.hpp  SerializationDeviceImpl.hpp  SerializedMemory.hpp
Graphics/ArchiveBuilder/interface/: ArchiveBuilder.h  ArchiveBuilderFactory.h  ArchiveBuilderFactoryLoader.h  Archiver.h  ArchiverFactory.h  ArchiverFactoryLoader.h  SerializationDevice.h
Graphics/ArchiveBuilder/src/: ArchiveBuilder.def  ArchiveBuilderFactory.cpp  ArchiveBuilderImpl.cpp  ArchiveBuilderImpl_PRS.cpp  ArchiveBuilderImpl_PSO.cpp  ArchiverFactory.cpp  ArchiverImpl.cpp  ArchiverImpl_PRS.cpp  ArchiverImpl_PSO.cpp  DummyRenderDevice.cpp  SerializableRenderPassImpl.cpp  SerializableResourceSignatureImpl.cpp  SerializableShaderImpl.cpp  SerializationDeviceImpl.cpp  SerializedMemory.cpp
Graphics/Archiver/: CMakeLists.txt
Graphics/Archiver/include/: ArchiveRepacker.hpp  ArchiverImpl.hpp  SerializablePipelineStateImpl.hpp  SerializableRenderPassImpl.hpp  SerializableResourceSignatureImpl.hpp  SerializableShaderImpl.hpp  SerializationDeviceImpl.hpp  SerializationEngineImplTraits.hpp  SerializedMemory.hpp  SerializedPipelineStateImpl.hpp  SerializedRenderPassImpl.hpp  SerializedResourceSignatureImpl.hpp  SerializedShaderImpl.hpp
Graphics/Archiver/interface/: Archiver.h  ArchiverFactory.h  ArchiverFactoryLoader.h  (+3 more)
Graphics/GLSLTools/: CMakeLists.txt
Graphics/GraphicsAccessories/: CMakeLists.txt
Graphics/GraphicsEngine/: CMakeLists.txt
Graphics/GraphicsEngine.NET/: Diligent-GraphicsEngine.NET.csproj  EngineFactory.cs  Mapping.xml
Graphics/GraphicsEngineD3D11/: CMakeLists.txt  readme.md
Graphics/GraphicsEngineD3D12/: CMakeLists.txt  readme.md
Graphics/GraphicsEngineD3DBase/: CMakeLists.txt
Graphics/GraphicsEngineMetal/: .clang-format  CMakeLists.txt  readme.md
Graphics/GraphicsEngineNextGenBase/: CMakeLists.txt
Graphics/GraphicsEngineOpenGL/: CMakeLists.txt  readme.md
Graphics/GraphicsEngineVulkan/: CMakeLists.txt  readme.md
Graphics/GraphicsEngineWebGPU/: CMakeLists.txt  readme.md
Graphics/GraphicsTools/: CMakeLists.txt  readme.md
Graphics/HLSL2GLSLConverterLib/: CMakeLists.txt  readme.md
Graphics/HLSLTools/: CMakeLists.txt
Graphics/ShaderTools/: CMakeLists.txt
Graphics/SuperResolution/: CMakeLists.txt  readme.md
Primitives/: CMakeLists.txt
Primitives/interface/: AlignedMalloc.h  Archive.h  BasicTypes.h  CommonDefinitions.h  DataBlob.h  DebugOutput.h  DefineGlobalFuncHelperMacros.h  DefineInterfaceHelperMacros.h  Errors.h  Errors.hpp  FileStream.h  FlagEnum.h  FormatMessage.h  FormatString.h  FormatString.hpp  InterfaceID.h  MemoryAllocator.h  Object.h  ReferenceCounters.h  StringView.hpp  UndefGlobalFuncHelperMacros.h  UndefInterfaceHelperMacros.h
Primitives/src/: AlignedMalloc.cpp  DebugOutput.cpp  Errors.cpp  test.cpp
Tests/DiligentCoreTest/: CMakeLists.txt
UnitTests/: CMakeLists.txt
UnitTests/DiligentCoreAPITest/: CMakeLists.txt
UnitTests/IncludeTest/: CMakeLists.txt
Utilities/File2Include/: .gitignore  CMakeLists.txt  File2String.cpp  File2String.sln  File2String.vcxproj  File2String.vcxproj.filters  ReadMe.txt  stdafx.cpp
(+3210 files in other folders)
